--- a/Final Report/Report.tex
+++ b/Final Report/Report.tex
@@ -53,29 +53,29 @@ Independent Study Final Report\\
 \vspace{.25in}
 
 \section{Introduction}
-Automatic music generation, which means a process of using some formal process to make music with minimal human intervention\cite{briefhistoryofac}, has centuries of history. An early example is Dice Music by Wolfgang Amadeus Mozart\cite{algorithmiccomposition} in 18th century, a game involved assembling a number of small musical fragments and combining them randomly, piecing together a new piece. A notably wide range of method are implemented in algorithmic composition with the help of computers. A well-known early work on algorithmic composition is that Illiac Suite has utilized the classical rules for counterpoint in the generation of the first and second movements (Hiller \& Isaacson, 1958)\cite{AImethodsinalgorithmicomposing}. Since 2016, Google's Magenta\cite{magenta} has been exploring the role of neural network and deep learning  in the process of creating art and music. Hidden Markov Model(HMM) is a statistical model that has been utilized in many aspect of music analysis and generation. Farbood and Schoner (2001) \cite{farbood2001analysis} were the first to apply HMM to composing dealing with fixed melody patterns. This report is a part of future work of Anna Yanchenko's\cite{yanchenko2017classical}, which explored application of variations of HMM and time varying autoregression models in algorithmic composition of piano pieces in Romantic era, focusing especially on melody.
+Automatic music generation, which means a process of using some formal process to make music with minimal human intervention\cite{briefhistoryofac}, has centuries of history. An early example is Dice Music by Wolfgang Amadeus Mozart\cite{algorithmiccomposition} in the 18th century, a game that involved assembling a number of small musical fragments and combining them randomly, piecing together a new piece. A notably wide range of methods are implemented in algorithmic composition with the help of computers. A well-known early work on algorithmic composition was the Illiac Suite that utilized the classical rules for counterpoint in the generation of the first and second movements (Hiller \& Isaacson, 1958)\cite{AImethodsinalgorithmicomposing}. Since 2016, Google's Magenta\cite{magenta} has been exploring the role of neural networks and deep learning  in the process of creating art and music. Hidden Markov Models (HMMs) are a statistical model that have been utilized in many aspects of music analysis and generation. Farbood and Schoner (2001) \cite{farbood2001analysis} were the first to apply HMMs to composition with fixed melody patterns. This report is a part of the future work of Anna Yanchenko's\cite{yanchenko2017classical}, which explored application of variations of HMMs and time varying autoregression models in algorithmic composition of piano pieces in the Romantic era, focusing especially on melody.
 
-The main goal is to apply a variation of HMM called first order dilated convolution to compose piano pieces and evaluate the generated pieces' quality with respect to different target. We also adopt multiple input way to average influence of single piece and modify a style in general. Some result gives positive response to intuition of the model, while some remains to be further explored.
+The main goal of this work is to apply a variation of HMMs called a first order dilated convolution to compose piano pieces and evaluate the generated pieces' quality with respect to different targets. We also train on multiple input sequences as a way to average the influence of a single piece and modify a style in general. Some results give confirmation to the intuition of the model, while some results remain to be further explored.
 
 
 \section{Data and Processing}
-To learn from input pieces and return generated pieces, the algorithm will need digital representation of music, which carries information about pitch, velocity, clock signal etc. A common format is the Musical Instrument Digital Interface (MIDI) \cite{midiwiki}. However, if we directly use MIDI and regard all possible status at each time signature as state space, there will be too many possibilities. Thus underfitting may happen and also it takes more time to run. Also, it's not reasonable to combine notes and velocities since there is no direct relevance between. To be compatible with HMM, MIDI is transferred into a sequence of note pitches (either one note or chords) at discrete beat represented by one of finite many positive integer. This allows the modeling of notes. For single dilated convolution, we simply take exactly same timing information from original piece. For multiple sequence version, timing information are randomly taken from original pieces. As for velocities, interpolation method is applied. These together form a generated piece.
+To learn from input pieces and return generated pieces, the algorithm will need a digital representation of music, which carries information about pitch, velocity, clock signal, etc. A common format is the Musical Instrument Digital Interface (MIDI) \cite{midiwiki}. However, if we directly use MIDI and regard all possible note and velocity combinations at each time signature as the state space, there will be too many possibilities. Thus, underfitting may happen and the model will take more time to run. Also, it's not reasonable to combine notes and velocities since there is no direct relevance between. To be compatible with HMMs, the MIDI representation is transferred into a sequence of note pitches (either one note or chords) at discrete time intervals, represented by one of finitely many positive integers. This allows the modeling of notes directly by the HMMs. For the single dilated convolution model, we simply take exactly the same timing information from the original piece. For the models trained on multiple sequences, timing information is randomly sampled from the original pieces. The velocities are interpolated and not modeled directly. These together form a generated piece.
 
-In order to adopt multiple input method, several pieces in similar composing style are required. 
-The input pieces for this report are 20 Romantic piano pieces, listed in Appendix \ref{appendix:b}. These are all originally MIDI files, transformed to CSV file  \cite{midicsv} and then processed to sequences of integer notes \cite{annagithub}. 
+In order to adopt the multiple sequences method, several pieces in a similar composing style are required. 
+The input pieces for this report are 20 piano pieces, listed in Appendix \ref{appendix:b}. These are all originally MIDI files, transformed to a CSV file  \cite{midicsv} and then processed to sequences of integer notes \cite{annagithub}. 
 \section{Model}
-The new model and its multiple input version are derived from standard first order HMM.
+The new model and its multiple input version are derived from the standard first order HMM.
 
 
 $\mathbf{First \;Order\;HMM}$
-Denote length of sequence as T, observation sequence and latent sequence as $\{ X_1,\cdots, X_T\}:=X_{1:T}$, $\{ Z_1,\cdots, Z_T\}:=Z_{1:T}$. Then the likelihood for the regular HMM is
+Denote the length of a sequence as T, observation sequence and latent sequence as $\{ X_1,\cdots, X_T\}:=X_{1:T}$, $\{ Z_1,\cdots, Z_T\}:=Z_{1:T}$. Then the likelihood for the regular HMM is
 $$
 P\left(X_{1: T}, Z_{1: T}| A, b, \pi \right)=P\left(Z_{1}| \pi \right) P\left(X_{1} | Z_{1}, b \right) \prod_{t=2}^{T} P\left(Z_{t} | Z_{t-1}, A\right) P\left(X_{t} | Z_{t},b\right)
 $$
-where T represents transition probability, b represents emmision probability and $\pi$ represents initial distribution. The expectation maximum algorithm, which is to optimize the parameters, is Baum-Welch algorithm.\cite{tutorial}\\
+where $A$ represents the transition probability, $b$ represents the emission probability and $\pi$ represents the initial distribution. The expectation maximization algorithm, which is used to optimize the parameters, is the Baum-Welch algorithm.\cite{tutorial}\\
 
 $\mathbf{Dilated\; Convolution}$
-Some interpretable variations can be made basing features of music. Besides an approximate distribution of notes and chords, we also want the model to grab some long-term structures, such as motifs. In regular HMM, the previous latent states influence next observation through next latent states which is by determining latent distribution and then emission distribution. We can allow a direct influence between last hidden states and observation to improve effect of a short past. The graphical model is as follows. 
+Some interpretable variations can be made based on features of music. Besides an approximate distribution of notes and chords, we also want the model to grab some long-term structure, such as motifs. In the regular HMM, the previous latent states influence the next observation through the next latent state  by determining the latent distribution and then the emission distribution. We can allow a direct influence between the previous hidden state and the current observation to improve the effect of a short past. The graphical model is as follows. 
 
 \begin{figure}[!htb]\centering
 \begin{tikzpicture}
@@ -106,28 +106,28 @@ Some interpretable variations can be made basing features of music. Besides an a
 \end{tikzpicture}
 \end{figure}
 
-The model is called $\mathbf{Dilated\;Convolution\;(first \;order)}$. We are expecting a better performance of model in grabbing long-term pattern. Likelihood function for this model is 
+The model is called $\mathbf{Dilated\;Convolution\;(first \;order)}$. We are expecting a better performance of this model in grabbing a long-term pattern. The likelihood function for this model is 
 $$
 P\left(X_{1: T}, Z_{1: T}| A, b, \pi \right)=P\left(Z_{1}| \pi \right) P\left(X_{1} | Z_{1}, b \right) \prod_{t=2}^{T} P\left(Z_{t} | Z_{t-1}, A\right) P\left(X_{t} | Z_{t-1},  Z_{t},b\right)
 $$
-The expectation maximum algorithm for this model is in Appendix \ref{appendix:c}.\\
+The expectation maximum algorithm for this model is given in Appendix \ref{appendix:c}.\\
 
 $\mathbf{Multiple\; Input}$
-In order to have sufficient data to make a reliable estimate of parameters, we may consider learning from multiple observation sequence. The joint likelihood is 
+In order to have sufficient data to make a reliable estimate of the parameters, we may consider learning from multiple observation sequences. The joint likelihood is 
 $$
 P(X^{1}_{1:T},\cdots, X^{K}_{1:T},Z_{1:T})=\prod_{k=1}^{K} P(X^{k}_{1:T}, Z_{1:T})
 $$
 The expectation maximum algorithm for this model is in Appendix \ref{appendix:d}.
 
-We consider in total 4 models. First we generate by dilated convolution with 5 hidden states and 10 hidden states respectively. Then we apply multiple input version. All these model are compared with homologous first order model.
+We consider 4 models in total. First, we generate from the dilated convolution model with 5 hidden states and 10 hidden states respectively. Then, we apply the multiple input version. All of these models are compared with the standard first order HMM.
 
 \section{Result}
 \subsection{Evaluation Metrics }
-The metrics we used in the following section are to evaluate the performance of generated pieces  by criterion of Romantic style in the sense of originality, musicality and temporal structure. The originality tells about the relevance between generated and original pieces, as well as complexity of generated pieces. Empirical entropy, edit distance and mutual information are considered. Musicality metrics include counts of notes, dissonant harmonic intervals and melodic intervals, all normalized by length of the piece. We also use percentage of intervals that are perfect consonances, imperfect consonances and dissonances. For temporal structure, PACF and ACF are metrics representing decay correlation of the system. 
+The metrics we used in the following section are to evaluate the performance of generated pieces  by Romantic style criterion in the sense of originality, musicality and temporal structure. The originality tells about the relevance between generated and original pieces, as well as complexity of generated pieces. Empirical entropy, edit distance and mutual information are considered. Musicality metrics include counts of notes, dissonant harmonic intervals and melodic intervals, all normalized by the length of the piece. We also use the percentage of intervals that are perfect consonances, imperfect consonances and dissonances. For temporal structure, PACF and ACF are considered as metrics that represent the decay correlation of the system. 
 
-After learning and optimizing the parameters by Baum-Welch, 1000 new pieces are generated. Each metric of the algorithm (except mutual information and edit distance ) takes the optimized value regrading RMSE as loss function. For mutual information and edit distance, we take their average over all pieces.
+After learning and optimizing the parameters by Baum-Welch, 1000 new pieces are generated. Each metric of the algorithm (except mutual information and edit distance ) RMSE is used to compare the generated pieces to the original piece. For mutual information and edit distance, we take their average over all generated pieces.
 \subsection{Dilated Convolution Single Input}
-For the single input version, we take "Pachelbel" as an example and set number of hidden states 5 as default. As previously mentioned, the intuition of dilated convolution model is to grab a longer-term structure. As a result, ACF/PACF, which can reflect whether sequences have a high degree of global structure. The expected ACF/PACF plot of dilated convolution have higher lags than first order plot.
+For the single input version, we take ``Pachelbel's Canon" as an example and set the number of hidden states to 5 as the default. As previously mentioned, the intuition of the dilated convolution model is to grab a longer-term structure. As a result, we focus on the ACF/PACF metrics, which can reflect whether sequences have a high degree of global structure. The expected ACF/PACF plot of the dilated convolution model would have structure to higher lags than the first order plot.
 \begin{figure}[H]
 
   \includegraphics[width=\linewidth]{ACF.png}
@@ -136,7 +136,7 @@ For the single input version, we take "Pachelbel" as an example and set number o
     \caption{ACF/PACF plot for first order and dilated convolution training on Pachelbel.}
 \end{figure}
 
-From \hyperref[fig: ACF]{Figure 1}, dilated convolutions model shows some persistence in ACF/PACF, but it's not sufficient to draw the conclusion that this modification of first order model leads to better global structure. 
+From \hyperref[fig: ACF]{Figure 1}, the dilated convolutions model shows some persistence in ACF/PACF, but it's not sufficient to draw the conclusion that this modification of the first order model leads to better global structure. 
 The other calculated metrics are listed in \hyperref[table:metrics]{Table 1}. 
 \\
 
@@ -152,7 +152,7 @@ The other calculated metrics are listed in \hyperref[table:metrics]{Table 1}.
 \label{table:metrics}
 \end{table}
 
-From the table, we can see that dilated convolution model generally didn't outperform first order model or even worse. What relatively significant are empirical entropy and count of harmonic intervals. This is reasonable since dilated convolution tend to generate a system with less freedom. Meanwhile, the result in \hyperref[table:compare]{Table 2} illustrates that comparison result depend not only on algorithms but also on original training pieces, thus it is more proper to compare multiple input performance. Also, a promising future work is about relationship between properties of original pieces and metric performance, which eventually answer the question that what kind of Romantic era musics are best materials to learn from. 
+From the table, we can see that the dilated convolution model generally does not outperform the first order model or is sometimes even worse. The metrics that are relatively significant are empirical entropy and the count of harmonic intervals. This is reasonable since the dilated convolution model tends to generate a system with less freedom. Meanwhile, the result in \hyperref[table:compare]{Table 2} illustrates that the comparison of results depend not only on the model but also on the original training pieces.  Thus, we should compare results across multiple input sequences. Also, a promising future work could explore the relationship between the properties of the original pieces and the metric performance of the generated pieces, which would eventually answer the question about what kind of Romantic era pieces are best to learn from. 
 \\
 
 \begin{table}[!htbp]
@@ -170,8 +170,7 @@ From the table, we can see that dilated convolution model generally didn't outpe
 
 \newpage
 $\mathbf{Interpretation}$
-explain caught
-The hidden states have specific meanings representing the underlying dynamics of the piece. Decompose the note into single pitches and look at the emission matrix ( the matrix of dilated convolution is three dimension with entries $b_{ijk}=p(P_t=k|Z_{t-1}=i,Z_t=j)$ where $P_t$ is some pitch, so we fix the second index j). For instance, if a hidden state only has high emission distribution of (C) and (G), then the state catch the perfect fifth. As is shown in \hyperref[fig:inter]{Figure 2}, fixing $Z_{t-1}=0$, the hidden states 1 catches D3, 2 catches G chord, 3 catches Gmaj 7 and 4 catches A2.
+The hidden states have specific meanings representing the underlying dynamics of the piece. We can decompose the notes into single pitches and look at the emission matrix (the emission matrix of the dilated convolution model is three dimensional with entries $b_{ijk}=p(P_t=k|Z_{t-1}=i,Z_t=j)$ where $P_t$ is some pitch, so we fix the second index j). For instance, if a hidden state only has high emission distribution of (C) and (G), then the state catch the perfect fifth. As is shown in \hyperref[fig:inter]{Figure 2}, fixing $Z_{t-1}=0$, the hidden states 1 catches D3, 2 catches G chord, 3 catches Gmaj 7 and 4 catches A2. This means that the dilated convolution model is able to recover basic aspects of harmony, even though there is no prior harmonic musical knowledge imparted in the model.
 \begin{figure}[H]
 \centering
 
@@ -182,14 +181,14 @@ The hidden states have specific meanings representing the underlying dynamics of
 
 \subsection{Dilated Convolution Multiple Input}
 $\mathbf{Difference\; in\; Metric\; Calculation}$
-When calculating metrics, edit distance and mutual information need that two pieces being compared have the same length. Different timing information were randomly assigned to generated pieces. Thus, edit distance and mutual information of each generated piece is calculated with the corresponding original piece. Due to the large scale of data, we calculate KL-divergence between distribution of metrics on original pieces and on all generated pieces for other metrics. \\
+When calculating metrics, edit distance and mutual information require that two pieces are compared that have the same length. Different timing information was randomly assigned to the generated pieces. Thus, the edit distance and mutual information metrics for each generated piece are calculated with the corresponding original piece. Due to the large scale of the data, we calculate the KL-divergence between the distribution of metrics on the original pieces and on all generated pieces for the other metrics. \\
 
 
 
 $\mathbf{Label\;Switching}$
-Baum-welch for multiple input takes weighted average of each set of parameters trained from one original pieces. However, directly doing so might ruin the subtle structure that we already have before averaging. Because of randomness of initial value, even if the hidden states caught the same thing, transition matrix might look completely different. For example, if five hidden states catch successively perfect five, sixth chord, seventh chord, ninth chord and eleventh chord, it's unreasonable to average this transition matrix with another one which catch sixth chord, seventh chord, ninth chord, eleventh chord and perfect five. 
+The Baum-Welch algorithm for multiple input pieces takes the weighted average of each set of parameters trained from one original pieces. However, directly doing so might ruin the subtle structure that we already have before averaging. Because of randomness of the initial value, even if the hidden states capture the same thing, the transition matrix might look completely different. For example, if five hidden states catch successively the perfect fifth, sixth chord, seventh chord, ninth chord and eleventh chord, it's unreasonable to average this transition matrix with another one which captures the sixth chord, seventh chord, ninth chord, eleventh chord and perfect fifth. 
 
-Resolution lies in find the permutation of hidden states. One way is by fixing one transition matrix and permute others that each of them has the minimum distance to ruler matrix. We can also reorder the hidden states that the first has the highest probability in latent sequence, and the last has the lowest. Then averaging all parameters seems reasonable. 
+A resolution lies in finding a permutation of the hidden states. One way is to fix one transition matrix and permute the others such that each of has the minimum distance to the reference matrix. Alternatively, we can reorder the hidden states such that the first has the highest probability in the latent sequence, and the last hidden state has the lowest probability. Then averaging all parameters seems reasonable. 
 
 
 The calculated metrics are listed in \hyperref[table: multiple metrics]{Table 3}. 
@@ -208,7 +207,7 @@ Dilated-10 & 10.9882 & 4.8365  & 7.6679  & 9.8692  & 5.1895 & 2.5347 \\ \hline
 \caption{KL-divergence of between distribution of metrics of multiple input pieces and generated pieces}
 \label{table: multiple metrics}
 \end{table}
-Noting that KL-divergence is distance between distribution, the first order HMM generally outperformed dilated convolution in there metrics. But speaking of number of hidden states, it seems that 10 hidden states didn't do as well as 5 in dilated model. This remains to be explored. 
+Noting that the KL-divergence is the distance between distributions, the first order HMM generally outperforms the dilated convolution model in the metrics. Additionally, in terms of the number of hidden states, it seems that 10 hidden states does not do as well as 5 in the dilated model. This remains to be explored. 
 
 \begin{table}[H]
 \centering
@@ -221,7 +220,7 @@ Edit Distance      & 0.915         & 0.916          & 0.9633                & 0.
 \caption{Mutual information and edit distance comparison of the four model}
 \label{table:mued}
 \end{table}
-As we can see from \hyperref[table:mued]{Table 4}, dilated model carries much more information about original pieces, while edit distance is also high. Combining \hyperref[fig:mued]{Figure 3}, dilated model tends to take information from input but generate pieces with more complexity. This is reasonable because 20 pieces are put in. It's easy for the model to conserve their information, but using 20 times large information to recompose will lead to a mess. 
+As we can see from \hyperref[table:mued]{Table 4}, the dilated model carries much more information about the original pieces, while edit distance is also high. Combining \hyperref[fig:mued]{Figure 3}, the dilated model tends to take information from the input piece but generates pieces with more complexity. This is reasonable because 20 pieces are used to train the parameters for the model. %It's easy for the model to conserve their information, but using 20 times large information to recompose will lead to a mess. 
 
 \begin{figure}[H]
 \centering
@@ -232,12 +231,12 @@ As we can see from \hyperref[table:mued]{Table 4}, dilated model carries much mo
 \end{figure}
 
 \section{Conclusion and Future Work}
-We applied dilated convolution model on pieces from Romantic era. The model generally satisfied the propose of finding long term structure with higher ACF/PACF, but it's not significant. The generated pieces appear melodic progressions sometimes, but still remain in short-term pattern. 
+We applied the dilated convolution model on pieces from Romantic era. The model generally satisfied the propose of finding long term structure with higher ACF/PACF, but did not show significant improvement over the first order HMM. The generated pieces sometimes show melodic progressions, but still remain unable to capture long-term patterns. 
 Based on the results, some future work directions are considered. 
 \begin{itemize}
 \item The emission probability can be extended to depend on more latent states, which might help to find significantly better performance in global structure or melodic progression. 
-\item The way to resolve label switching issue can be reconsidered to be more interpretable. Further more, even if we adopted the right way, averaging over all pieces is still unreasonable. For instance, consider averaging two set of parameters such that one from five hidden states catching successively perfect five, sixth chord, seventh chord, ninth chord and eleventh chord, one from five hidden states catching A2, B2, D3, A3 and D4. These requires close meaning of hidden states, which leads to the third direction.
-\item We tend to find what kind of pieces best to learn from in the sense of musicality (count of melodic intervals) and  complexity (empirical entropy). Also, we want to know what qualities makes it reasonable to put some pieces together for multiple input in the sense of musicality (unique notes and melodic intervals).
+\item The way to resolve label switching issue can be reconsidered to be more interpretable. Furthermore, even if we adopt the ``right" way, averaging over all pieces is still unreasonable. For instance, consider averaging two set of parameters such that one from five hidden states catching successively perfect five, sixth chord, seventh chord, ninth chord and eleventh chord, one from five hidden states catching A2, B2, D3, A3 and D4. These requires understanding the meaning of the hidden states, which leads to the third direction.
+\item We can further explore what kind of pieces are best to learn from in the sense of musicality (count of melodic intervals) and  complexity (empirical entropy). Also, we want to know what qualities make it reasonable to put some pieces together for multiple inputs in the sense of musicality (unique notes and melodic intervals).
 \end{itemize}
 \bibliographystyle{plain}
 \bibliography{ref.bib}
